<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fillViewport="true"
    android:layout_marginBottom="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.login.LoginScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:background="@color/primaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:src="@drawable/baseline_arrow_back_24"/>

        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">
            <TextView
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/user_name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_account_circle_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/retype_password_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/retype_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/reset"
                style="@style/Content"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/reset"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/signup"
                style="@style/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <TextView
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/thank_you_for_using_us"
            android:textAlignment="center" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>