<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screen.login.forgot_password.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:background="@color/primaryDark"
            android:src="@drawable/baseline_arrow_back_24" />

        <LinearLayout
            android:id="@+id/forgot_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/forgot_password_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/user_name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_account_circle_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/new_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/retype_password_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/retype_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/user_layout_bg"
                android:padding="10dp"
                style="@style/Heading"
                android:textColor="@color/accent"
                android:textAlignment="center"
                android:text="Captcha: Aga#42" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/captcha_il"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:hint="@string/enter_the_above_captcha"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_captcha_24"
                    android:drawablePadding="8dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>