<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/primaryDark"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_bg"
            android:padding="5dp"
            android:src="@drawable/ic_close"
            app:tint="@color/accent" />

        <TextView
            android:id="@+id/current_user"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/current_user"
            android:textColor="@color/accent" />

        <include
            layout="@layout/item_user"
            android:id="@+id/user_layout"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_user" />

<!--        <TextView-->
<!--            android:id="@+id/user_name"-->
<!--            style="@style/Content"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/current_user"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:padding="5dp"-->
<!--            android:text="@string/app_name" />-->

        <Button
            android:id="@+id/logout"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_layout"
            android:drawableStart="@drawable/ic_close"
            android:drawablePadding="20dp"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/other_users"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logout"
            android:layout_margin="5dp"
            android:text="@string/other_users"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/no_user_available"
            style="@style/Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/other_users"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/no_other_user_registered" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/other_users"
            android:layout_marginHorizontal="5dp"
            tools:itemCount="0"
            tools:listitem="@layout/item_user" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>